--- a/Concert.html
+++ b/Concert.html
@@ -13,7 +13,7 @@
             <div class="nav">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="Music.html">Music</a></li>
+                    <li><a href="music.html">Music</a></li>
                     <li><a href=#>Concerts</a></li>
                 </ul>
             </div>
